Multiple Changes, Read Description - layout bugs in profile specifically regarding window resizing fixed - layout of dashboard revamped, todo list input replaced with store button

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ div.navigation-bar {
   border-bottom: 1px solid gray;
   top:0;
   left:0;
+  background-color: white;
 }
 
 /*disable navigation bar when task in session*/
