--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -75,7 +75,7 @@ div.task-history-display {
     grid-column-start: 1;
     grid-column-end: span 10;
     grid-row-start:8;
-    grid-row-end: span 14;
+    grid-row-end: span 13;
     width:100%;
     background-color: #F0F2F5;
     display:flex;
@@ -101,7 +101,7 @@ table.task-table {
 
 table.task-table, table.task-table th, table.task-table td {
     border: 0.1px solid rgb(228, 228, 228);
-    
+    white-space: pre-wrap;
 }
 
 table.task-table tr > td {
@@ -139,10 +139,12 @@ div.journal-popup form {
     flex-direction: column;
     padding:40px;
     gap:20px;
+    width:100%;
+    height:100%;
 }
 
 div.journal-popup textarea {
-    height:35vh;
+    height:100%;
     resize:none;
     overflow-y: scroll;
 }
